@@ -21,3 +21,4 @@ Andrew Elia (dr2d export filter)
 Ralf Stubner (bugfixes about pstoedit usage)
 Dag Wieers (rpm-spec file)
 Mario Kleiner (fix a bug in mig output)
+jakobfrandsen (report a bug in Makefile.am)
