@@ -1,3 +1,8 @@
+2003-06-08  Masatake YAMATO  <yamato@redhat.com>
+
+	* Makefile.am (output_src): Remove typo(+).
+	Suggested by "jakobfrandsen" <jakobfrandsen@yahoo.dk>.
+
 2003-06-07  Mario Kleiner <mario.kleiner@tuebingen.mpg.de>
 
 	* output-mif.c (output_mif_writer): fixed bug in output 
